--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         <p> To cleanse your blood vessels safely I can name only one remedy with an impeccable
                             reputation —
                             <a href="{offer_link}" target="_blank">
-                                <strong> CircuLife Blood Pressure Support </strong><strong> CircuLife Blood Pressure Support </strong>                            </a> . This treatment may add 10 or even 20 years to your
+                                <strong> CircuLife Blood Pressure Support </strong></a> . This treatment may add 10 or even 20 years to your
                             life. And this will be a full life in all senses. You will feel fresh, alive and energetic
                             until the ripe age, your brain and memory will work flawlessly, and sudden pain in any part
                             of the body is unlikely to ever bother you again.
